# SlitherShots

./: .gitignore  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  main  main.cc  settings.txt  sfml  template_settings.txt
Food/: Food.cc  Food.h  Size_food.cc  Size_food.h  Speed_food.cc  Speed_food.h
Framework/: Game_engine.cc  Game_engine.h  Game_state.h  Settings_handler.cc  Settings_handler.h
Game_objects/: Ball.cc  Ball.h  Game_object.cc  Game_object.h  Goal.cc  Goal.h  Line  Line.cc  Line.h  Movable_object.cc  Movable_object.h  Scoreboard.cc  Scoreboard.h  Static_object.cc  Static_object.h  Wall.cc  Wall.h  Worm.cc  Worm.h  Worm_segment.cc  Worm_segment.h
States/: Gamemodes_state.cc  Gamemodes_state.h  Help_state.cc  Help_state.h  Menu_state.cc  Menu_state.h  Play_state.cc  Play_state.h  Win_state.cc  Win_state.h
